# gaze

./: .gitignore  LICENSE  Makefile  Package.swift  README.md
Sources/GazeCoreKit/: GazeCoreKit.swift
Sources/GazeProtocolKit/: BinarySampleCodec.swift  ProviderSamplePayload.swift  ProviderStreamClient.swift  QuadraticCalibrationModel.swift  ScreenPlaneCalibrationModel.swift  WireEnvelopeStreamDecoder.swift  WireProtocol.swift
Sources/GazeProviderKit/: GazeProvider.swift
core/include/gaze/: gaze_sdk.h
core/src/: gaze_sdk.cpp
demo/: README.md  project.yml
demo/GazeBeamHost/: BeamHostApp.swift  BeamHostControlView.swift  BeamHostViewModel.swift  BeamOverlayModel.swift  BeamOverlayView.swift  BeamOverlayWindowController.swift  CalibrationPersistence.swift  CalibrationSupport.swift  HostFileLogger.swift  Info.plist  LocalIPAddressProvider.swift  ProviderSampleClient.swift  ProviderSampleServer.swift  USBMuxBridge.swift
demo/GazeDemoApp/: ContentView.swift  GazeDemoApp.swift  GazeDemoViewModel.swift  Info.plist  ProviderSampleBroadcastServer.swift
demo/GazeDemoApp.xcodeproj/: project.pbxproj
demo/windows/: CMakeLists.txt  GazeWinHost.cpp  README.md
docs/: architecture.md
protocol/: wire_protocol.md
sdks/python/gaze_host_sdk/: pyproject.toml
sdks/rust/gaze-host-sdk/: Cargo.toml
sdks/typescript/gaze-host-sdk/: package-lock.json  (+2 more)
tests/: core_tests.cpp
tests/GazeProtocolKitTests/: GazeCoreKitTests.swift  GazeProtocolKitTests.swift  QuadraticCalibrationModelTests.swift  ScreenPlaneCalibrationModelTests.swift  WireEnvelopeStreamDecoderTests.swift
(+8 files in other folders)
